<resources>
    <string name="app_name_formatted">Snipe \n A \n Game</string>
    <string name="app_name">SnipeAGame</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Register Screen-->
    <string name="sign_up">Sign up</string>
    <string name="register_hint_firstName">First Name</string>
    <string name="register_hint_lastName">Last Name</string>
    <string name="register_hint_email">Email Address</string>
    <string name="register_hint_phone">Phone Number</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_confirmPassword">Confirm Password</string>
    <string name="register_text">Register</string>
    <string name="invalid_phone">The phone number must contain at least 10 digits and must start with 07</string>
    <string name="invalid_first_name">The introduced first name is invalid</string>
    <string name="invalid_last_name">The introduced last name is invalid</string>
    <string name="not_matching_passwords">The passwords are not matching</string>
    <string name="change_password">Change password</string>
    <string name="introduce_email">Introduce email</string>
    <string name="privacy_policy">I agree to the <b><a href="">Privacy Policy</a></b></string>
    <!--Login Screen-->
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="empty_password">Please enter your password</string>
    <string name="invalid_password">Password must contain a minimum of 8 characters, 1 digit and 1 special character</string>
    <string name="invalid_email">The introduced email is invalid</string>
    <string name="not_found_email">The email could not be found</string>
    <string name="no_error">""</string>
    <!--Success Screen-->
    <string name="account_created">Congratulations for joining us! You will be redirected back in %1$d seconds</string>
    <!--Alert Messages-->
    <string name="sign_up_alert_title">Sign up failed</string>
    <string name="sign_in_alert_title">Sign in failed</string>
    <string name="oops_title">Oops!</string>
    <string name="email_already_used_error">The email is already registered.</string>
    <string name="no_internet_error">No internet. Please try again later.</string>
    <string name="incorrect_account_error">Incorrect email or password.</string>
    <string name="update_user_error">Update user failed.</string>
    <string name="not_enough_text_error">Not enough text for analyzing</string>
    <string name="general_error">Something went wrong, please try again.</string>
    <string name="general_message">General</string>
    <string name="invalid_user_error">Invalid user.</string>
    <string name="retry_button">Retry</string>
    <string name="cancel_button">Cancel</string>
    <string name="incorrect_email">The email in the field is invalid. Introduce a valid email address above</string>
    <string name="whatsapp">Please install Whats App</string>
    <!--Faction Screen-->
    <string name="choose_faction">So far so good!</string>
    <string name="hint_text">Now it\'s time for you to choose your faction</string>
    <string name="extra_information">Tap here for information</string>
    <string name="factions_explained">Factions are premade groups meant to bring people together and add dynamism to the game by offering players unique perks.</string>
    <string name="swipe_to_begin">Swipe left to see the factions</string>
    <string name="airborne_squad">Airborne Squad</string>
    <string name="airborne_description">Allows up to 2 players from the team to deploy 10 seconds faster</string>
    <string name="special_perk">Special Perk</string>
    <string name="select_faction">SELECT FACTION</string>
    <string name="immortals">Immortals</string>
    <string name="immortals_description">Allows the team to revive a single player per match</string>
    <!--Role Screen-->
    <string name="choose_role">For the final step it\'s time to choose 2 roles</string>
    <string name="finish">FINISH</string>
    <string name="role_marksman">Marksman</string>
    <string name="marksman_description">Suitable for medium to long range</string>
    <string name="role_machine_gunner">Machine Gunner</string>
    <string name="machine_gunner_description">Perfect for suppressing</string>
    <string name="role_assault_rifleman">Assault Rifleman</string>
    <string name="assault_rifleman_description">Ideal for medium to close combat</string>
    <string name="role_grenadier">Grenadier</string>
    <string name="grenadier_description">Fit for using utility equipment</string>
    <string name="role_medic">Medic</string>
    <string name="medic_description">Brings back in game downed mates</string>
    <string name="role_breacher">Breacher</string>
    <string name="breacher_description">Good at creating entry points</string>
    <!--Bottom Navigation-->
    <string name="games">Games</string>
    <string name="achievements">Achievements</string>
    <string name="my_profile">My Profile</string>
    <string name="journal">Journal</string>
    <!--My Profile-->
    <string name="initial_number">0</string>
    <string name="full_name">Full Name</string>
    <string name="first_role">First Role: %1s</string>
    <string name="second_role">Second Role: %1s</string>
    <string name="takedowns">Takedowns</string>
    <string name="email_address">Email: %1s</string>
    <string name="phone_number">Phone: %1s</string>
    <!--Achievements Screen-->
    <string name="available_achievements">AVAILABLE</string>
    <string name="unlocked_achievements">UNLOCKED</string>
    <string name="unlock">UNLOCK</string>
    <!--Games Screen-->
    <string name="all_games">ALL GAMES</string>
    <string name="my_games">MY GAMES</string>
    <string name="create_game">Create Game</string>
    <string name="leave_game">Leave Game</string>
    <string name="game_date">Game Date: %1s</string>
    <string name="select_date">Select Date</string>
    <string name="game_time">Game Time: %1s</string>
    <string name="select_time">Select Time</string>
    <string name="location">Location</string>
    <string name="number_of_players">Number of players (min.2 max. 30)</string>
    <string name="join_game">JOIN GAME</string>
    <string name="player_faction">"Faction"</string>
    <string name="player_roles">Roles</string>
    <string name="players">Players</string>
    <string name="game_complete">This game is over. Return to "My Games" \n section to complete it.</string>
    <string name="finish_game">Finish Game</string>
    <string name="game_completed">Game Completed</string>
    <string name="takedowns_hint">Insert takedowns</string>
    <string name="submit">Submit</string>
    <string name="takedown_error">Introduce a valid number</string>
    <string name="no_games_were_found">No games were found</string>
    <string name="search_games">Search for games</string>
    <string name="invite_friend">Invite friend</string>
    <string name="invite_string">"Hello, I would like to an invite you to an airsoft game, here is the invite code: "</string>
    <string name="invite_through">Invite through</string>
    <string name="tap_for_more_information">Tap for more information</string>
    <!--Privacy Policy Screen-->
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="first_section">This privacy policy applies to the SnipeAGame app (hereby referred to as \'\'Application\'\') for mobile devices that was created by Pop Emanuel (hereby referred to as \'\'Service Provider\'\') as a Freemium service. This service is intended for use AS IS.</string>
    <string name="second_section">The Application collects information when you download and use it. This information may include information such as Your device\'s Internet Protocol address (e.g. IP address) The pages of the Application that you visit, the time and date of your visit, the time spent on those pages The time spent on the Application The operating system you use on your mobile device The Application does not gather precise information about the location of your mobile device. The Service Provider may use the information you provided to contact you from time to time to provide you with important information, required notices and marketing promotions. For a better experience, while using the Application, the Service Provider may require you to provide us with certain personally identifiable information, including but not limited to <b>Email Address, Phone Number, First Name, Last Name </b> . The information that the Service Provider request will be retained by them and used as described in this privacy policy.</string>
    <string name="information_used">Information used</string>
    <string name="third_party_access">Third Party Access</string>
    <string name="third_section">Only aggregated, anonymized data is periodically transmitted to external services to aid the Service Provider in improving the Application and their service. The Service Provider may share your information with third parties in the ways that are described in this privacy statement. The Service Provider may disclose User Provided and Automatically Collected Information: as required by law, such as to comply with a subpoena, or similar legal process; when they believe in good faith that disclosure is necessary to protect their rights, protect your safety or the safety of others, investigate fraud, or respond to a government request; with their trusted services providers who work on their behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.</string>
    <string name="your_consent">Your consent</string>
    <string name="consent">This Privacy Policy may be updated from time to time for any reason. The Service Provider will notify you of any changes to the Privacy Policy by updating this page with the new Privacy Policy. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes. This privacy policy is effective as of 02/10/2023. By using the Application, you are consenting to the processing of your information as set forth in this Privacy Policy now and as amended by us.</string>
    <!-- Journal Screen-->
    <string name="location_icon">location_icon</string>
    <string name="time_icon">time_icon</string>
    <string name="edit_journal">Edit Journal</string>
    <string name="journal_entry">Journal Entry</string>
    <string name="add_to_journal">Check to add game to journal</string>
    <string name="takedown_icon">takedown_icon</string>
    <string name="introduce_journal_text_here">Introduce journal text here</string>
    <string name="save_journal">Save Changes</string>
    <string name="upload_images">Upload Images</string>
    <string name="image_note">The changes will be shown after pressing the save button</string>
</resources>