<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/edit_text_focus"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alertTitle_textView"
        style="@style/AlertTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size_8"
        android:text="@string/game_completed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_inputTextLayout"
        style="@style/TextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8"
        android:hint="@string/takedowns_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_inputText"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_journal"/>

    <LinearLayout
        android:id="@+id/button_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alert_negativeButton"
            style="@style/AlertNegativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_8"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/alert_positiveButton"
            style="@style/AlertPositiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_8"
            android:text="@string/submit" />

    </LinearLayout>
</LinearLayout>